<resources>
    <string name="app_name">变钱包</string>
    <string name="home">首页</string>
    <string name="user">我的</string>
    <string name="check_network">请检查网络连接！</string>
	<string name="member_register">会员注册</string>
    <string name="sd_check_fail">未检测到存储设备，请插入SD卡！</string>
    <string name="storageDevice">请插入存储设备，否则将无法读取图片</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="service_qq1">2969722640</string>
    <string name="account_notice">手机号注册</string>
    <string name="account_format_error">用户名格式错误</string>
    <string name="password_different">两次输入的密码不一致</string>
    <string name="reg_suceess">注册成功，请登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="slider">滑块验证</string>
    <string name="login_account">请输入您的手机号码</string>
    <string name="login_password">请输入登录密码</string>
    <string name="login_CPassword">登录密码</string>
    <string name="login_verification_code">短信验证码</string>
    <string name="deal_password">交易密码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="login_out">退出登录</string>
    <string name="get_back_password">找回密码</string>
    <string name="modify_password">修改密码</string>
    <string name="post_touxiang">修改头像</string>
    <string name="help">帮助</string>
    <string name="loan_help">帮助说明</string>
    <string name="verified_user">实名认证</string>
    <string name="verified_zhushi">注：认证审核时间   早上9:00—12:00；\n\t\t下午12:30—18:00</string>
    <string name="loan_zhushi">注：本次分期由通华小贷提供服务</string>
    <string name="check_result">检测结果</string>
    <string name="check">设备评估</string>
    <string name="guide">变钱包使用指南</string>
    <string name="feedbackHint">请输入您的建议和反馈</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_tp1">自主研发的APP平台，本公司是苏州第一家手机租赁服务商，手机出租商业模式提出者，
        手机租赁行业的开创者与领导者， 租机服务范围覆盖全国各省份一二线城市，为个人用户和企业用户， 
        提供以租代购、分期租机、企业租机、测试租机、融资租赁等多元化租机业务。</string>
    <string name="version">当前版本号：</string>
    <string name="deleting">正在删除，请稍等...</string>
    <string name="wait">请稍后...</string>
    <string name="clean_cache_sucess">清除缓存成功</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="my_data">个人资料</string>
    <string name="my_data_prompt">请完善以下资料，资料越完善，贷款额度越高</string>
    <string name="my_education">我的学历</string>
    <string name="my_loan">我的借款</string>
    <string name="latefee_details">滞纳金详单</string>
    <string name="my_repay">我的还款</string>
    <string name="rate_query_tp1" formatted="false">快联金融助人贷借款利率为年化15%。分365期等额本息每期31.5元365天还清。
        其中账户管理费为每日28.5元账户管理费包括身份验证费、手机验证费、银行验证费、征信审核费、信息发布费、撮合服务费、电话客服费等组成。</string>
    <string name="rate_query_tp2" formatted="false">提前还款一次性全额还款为借款金额，对已还款金额作违约处理</string>
    <string name="choice_province">选择省</string>
    <string name="choice_city">选择市</string>
    <string name="choice_district">选择区县</string>
    <string name="my_info">我的信息</string>
    <string name="my_work_info">职位信息</string>
    <string name="my_work_tp1">请提交您的详细工作信息，包括工作单位、所在岗位、办公电话、公司地址等</string>
    <string name="my_operator_info">手机运营商</string>
    <string name="my_operator_tp1">手机运营商认证需先上传您的通讯录，此信息用于查询个人征信，承若保护用户隐私</string>
    <string name="my_operator_tp2">请确保此手机已实名登记</string>
    <string name="my_operator_tp3">1、请谨慎输入，多次输错可能导致被锁
        \n2、开始认证就不能中断，过程比较耗时，请耐心等待
		\n3、移动用户，发送“MMCZ”至10086重置服务密码
		\n4、联通用户，发送“MMCZ#6位新密码”至10010重置服务密码
		\n5、电信用户，发送“MMCZ”至10001重置服务密码</string>
    <string name="my_order_info">账单信息</string>
    <string name="my_order_tp1">请提交借记卡网银帐号信息</string>
    <string name="my_order_tp11">请提交信用卡网银帐号信息</string>
    <string name="my_order_tp2">数据将加密传输，请放心填写</string>
    <string name="my_order_tp3">网银帐号信息</string>
     <string name="my_fund_info">住房公积金认证</string>
     <string name="fund_city_list">选择城市</string>
     <string name="fund_province_list">选择省</string>
     <string name="my_fund_tp1">1、请谨慎输入，多次输错可能导致帐号被锁
         \n2、开始认证就不能中断，过程比较耗时，请耐心等待
         \n3、个人公积金查询初始密码为111111</string>
     <string name="my_taobao_info">淘宝认证</string>
     <string name="my_jingdong_info">京东认证</string>
     <string name="my_huabei_info">支付宝认证</string>
     <string name="my_huabei_tp1">请提交支付宝帐号信息</string>
     <string name="my_huabei_tp2">注：审核期间请关闭支付宝刷脸功能,谢谢合作</string>
     <string name="my_huabei_tp3">正在认证，大概需要2分钟，请耐心等待，不要离开这个页面</string>
    <string name="loan">借款</string>
    <string name="repay_need_know">续借手续费包含借款利息和管理费，与首次借款申请费用相同，借款结束当天申请只需支付手续费，逾期申请需支付手续费和滞纳金。</string>
    <string name="loan_rule">三方借款协议</string>
    <string name="phone_authen">手机运营商认证</string>
    <string name="phone_authen_tp1">登录时间大约耗时2分钟\n认证过程时间较长，请耐心等待</string>
    <string name="pay_method_alipay">支付宝支付</string>
    <string name="pay_method_alipay2">推荐已开通支付宝支付的用户使用</string>
    <string name="pay_method_wuka">无卡支付</string>
    <string name="pay_method_wuka2">银行卡支付</string>
    <string name="pay_method_wxpay">微信支付</string>
    <string name="pay_method_choose_title">请选择支付方式</string>
    <string name="credit_dai_fu">信用卡代还</string>
    <string name="credit_dai_fu_pay">支付</string>
    <string name="credit_dai_fu_order">代还记录</string>
    <string name="recovery_notice1">1、山寨机、高仿机不回收</string>
    <string name="recovery_notice2">2、屏幕锁未解, iCloud账户未注销不回收</string>
    <string name="recovery_notice3">拒收并退回以上两种手机, 您需承担双向费用</string>
    <string name="recovery_unlock1">Q:  iPhone如何取消开机密码</string>
    <string name="recovery_unlock2">A:  设置 > Touch ID和密码 > 点击关闭密码</string>
    <string name="recovery_unlock3">Q:  iPhone如何关闭iCloud</string>
    <string name="recovery_unlock4">A:  设置 > 进入iCloud > 注销 > 从我的iPhone删除 > 输入密码 > 删除</string>
    <string name="recovery_cue1">请您在邮寄手机前:</string>
    <string name="recovery_cue2">1、备份通讯录、短信等重要数据</string>
    <string name="recovery_cue3">2、解除屏锁密码锁、ID账号锁，并恢复出厂设置</string>
    <string name="recovery_cue4">3、确保无SIM卡或TF卡遗留在手机中</string>
    <string name="black_list_show">账户存在风险，暂时不能认证！</string>
    <string name="loan_tp4">您是首次申请，为提高个人信用，需上传手机号，请选择亲属关系：</string>
    <string name="late_fee_tp">提示：滞纳金计算请到“首页”的“费率查询”查看</string>
    <string name="late_fee_tp2">增加或减免滞纳金</string>
    <string name="extension_qr_code">我要推广</string>
    <string name="my_commis">我的奖励金</string>
    <string name="my_commis_tp1" formatted="false">1、分享页面给好友，好友通过邀请页下载草莓商城APP并注册；
\n2、被邀请好友手首次购买手机且过了7天无理由退换货后，您将获得66元现金红包
\n3、现金红包可在“我的奖励金”查询，满50元即可提现，2个工作日到账，提现前请先实名并绑定银行卡</string>
    <string name="loan_tp1">提示：
\n1、每次借款至少100元且为100元的整数倍，最快20分钟到达您绑定的收款银行卡
\n2、如已有借款，请先还完款后，才能再次借款
</string>
    <string name="loan_tp2">注：一次性全额还款为借款金额，对已还款金额作为违约金处理</string>
    <string name="express_digits">0123456789ABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
</resources>